--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header class="header">
       <div class="conteudo">
         <h1 class="logo">Roberto Jean</h1>
+        <span class="icon-menu" id="btn-menu"></span>
         <nav class="nav" id="nav">
           <ul class="menu">
             <li class="menu_item select">Inicio</li>
